media: Continue aborting FFMpegDemuxerStream::Read() calls until Seek().

For decoders that support multiple in-flight decodes (ie.
GpuVideoDecoder), it was possible to schedule a Read() after
AbortPendingReads() but before Seek() was called. These reads were
satisfied with data that decoders were not expecting (because the
aborted buffers were fully dropped, there were gaps in the input).

Now AbortPendingReads() is defined to continue to abort Read()s until
Seek(), which solves the problem. ChunkDemuxer was already implementing
this behavior, so only FFmpegDemuxer requires changes.

BUG=667210

Review-Url: https://codereview.chromium.org/2546263002
Cr-Commit-Position: refs/heads/master@{#436428}

Former-commit-id: 216002cff0b287035a57cacc510419e15e5217c9